--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Prediction Tuberculosis</title>
+    <title>Prédiction Tuberculose</title>
 </head>
 <body>
     <h1>Prédiction Tuberculose</h1>
